@@ -3,6 +3,7 @@ v0.10.0
 * [BGBUILD-313] boxgrinder build fails to build ec2 image if ec2-user already exists
 * [BGBUILD-318] Add support for us-west-2 region
 * [BGBUILD-308] Clearer error message when unrecognised file extension is used
+* [BGBUILD-322] Allow selection of kernel and ramdisk for ec2 and ebs plugins
 
 v0.9.8
 
